--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <div class="btn_add">+</div>
     </div>
     <div class="list_editor_container">
-      <ul classs="list_editor">
+      <ul class="list_editor">
         <li class="name">
           <p class="name_title">Название</p>
         </li>
@@ -25,7 +25,7 @@
           <p class="action_title">Действия</p>
         </li>
       </ul>
-      <ul classs="list_editor">
+      <ul class="list_editor">
         <li class="name">
           <p class="name_title">iPhone XR</p>
         </li>
